--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoConnection": "Data Source=ZB14TW\\SQLEXPRESS;Initial Catalog=Demo;Integrated Security=True;TrustServerCertificate=true"
+    "DemoConnection": "Data Source=.;Initial Catalog=Demo;Integrated Security=True;TrustServerCertificate=true"
   }
 }
